; ModuleID = '/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_7zFile.c_File_Seek.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_7zFile.c_File_Seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@SEEK_SET = common dso_local global i32 0, align 4
@SEEK_CUR = common dso_local global i32 0, align 4
@SEEK_END = common dso_local global i32 0, align 4
@ERROR_INVALID_PARAMETER = common dso_local global i64 0, align 8
@FILE_BEGIN = common dso_local global i32 0, align 4
@FILE_CURRENT = common dso_local global i32 0, align 4
@FILE_END = common dso_local global i32 0, align 4
@NO_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @File_Seek(%struct.TYPE_5__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %17 [
    i32 128, label %11
    i32 130, label %13
    i32 129, label %15
  ]

11:                                               ; preds = %3
  %12 = load i32, i32* @SEEK_SET, align 4
  store i32 %12, i32* %8, align 4
  br label %18

13:                                               ; preds = %3
  %14 = load i32, i32* @SEEK_CUR, align 4
  store i32 %14, i32* %8, align 4
  br label %18

15:                                               ; preds = %3
  %16 = load i32, i32* @SEEK_END, align 4
  store i32 %16, i32* %8, align 4
  br label %18

17:                                               ; preds = %3
  store i64 1, i64* %4, align 8
  br label %34

18:                                               ; preds = %15, %13, %11
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %22, align 4
  %24 = sext i32 %23 to i64
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @fseek(i32 %21, i64 %24, i32 %25)
  store i32 %26, i32* %9, align 4
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @ftell(i32 %29)
  %31 = load i32*, i32** %6, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i32, i32* %9, align 4
  %33 = sext i32 %32 to i64
  store i64 %33, i64* %4, align 8
  br label %34

34:                                               ; preds = %18, %17
  %35 = load i64, i64* %4, align 8
  ret i64 %35
}

declare dso_local i32 @fseek(i32, i64, i32) #1

declare dso_local i32 @ftell(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
